--- a/index.html
+++ b/index.html
@@ -7,142 +7,146 @@
     <script src="https://kit.fontawesome.com/7955c5c222.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <title>Football HTML responsive template</title>
 </head>
 <body>
     
-    <!-- Start header area -->
-    <header class="header-area">
-        <div class="container">
-            <div class="inner-header-row">
-                <div class="float-left">
-                    <nav class="main-menu">
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Clubs</a></li>
-                            <li><a href="#">World Cup 2023</a></li>
-                            <li><a href="#">UpComing Matches</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="float-right">
-                    <a href="#" class="btn-button"><i class="fas fa-sign-in-alt"></i> Login</a>
-                </div>
-            </div>
-        </div>
-    </header>
-    <!-- End header area -->
-
-    <!-- Start Hero area -->
-    <section class="hero-area">
-        <div class="container grid-col-2">
+  <!-- Start header area -->
+  <header class="header-area">
+    <div class="container">
+        <div class="inner-header-row">
             <div class="float-left">
-                <h1>Conmebol Copa America 2021</h1>
-                <a href="#" class="btn-button">Watch Live <i class="fas fa-arrow-right"></i></a>
+                <nav class="main-menu">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Clubs</a></li>
+                        <li><a href="#">World Cup 2023</a></li>
+                        <li><a href="#">UpComing Matches</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
             </div>
             <div class="float-right">
-                <img src="img/banner.png" alt="banner image">
+                <a href="#" class="btn-button"><i class="fas fa-sign-in-alt"></i> Login</a>
             </div>
         </div>
-    </section>
-    <!-- End Hero area -->
+    </div>
+</header>
+<!-- End header area -->
 
-    <!-- Start Players area -->
-    <section class="players-area">
-        <div class="container">
-            <div class="all-players">
-                <div class="single-player">
-                    <img src="img/players/player-1.png" alt="player">
-                    <h2>Neymar Jr</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
-                </div>
-                <div class="single-player">
-                    <img src="img/players/player-2.png" alt="player">
-                    <h2>Lionel Messi</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
-                </div>
-                <div class="single-player">
-                    <img src="img/players/player-3.png" alt="player">
-                    <h2>Cristiano Ronaldo</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
-                </div>
-                <div class="single-player">
-                    <img src="img/players/player-4.png" alt="player">
-                    <h2>Paulo Dybala</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
-                </div>
-                <div class="single-player">
-                    <img src="img/players/player-5.png" alt="player">
-                    <h2>Mesut Ozil </h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
-                </div>
-                <div class="single-player">
-                    <img src="img/players/player-6.png" alt="player">
-                    <h2>Mauro Icardi </h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
-                </div>
-                <div class="single-player">
-                    <img src="img/players/player-7.png" alt="player">
-                    <h2>Di Maria</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
-                </div>
-                <div class="single-player">
-                    <img src="img/players/player-8.png" alt="player">
-                    <h2>Kylian Mbappé</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
-                </div>
-                <div class="single-player">
-                    <img src="img/players/player-9.png" alt="player">
-                    <h2>Mohamed Salah</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
-                </div>
-                <div class="single-player">
-                    <img src="img/players/player-10.png" alt="player">
-                    <h2>Harry Kane</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
-                </div>
-                <div class="single-player">
-                    <img src="img/players/player-11.png" alt="player">
-                    <h2>Kevin De Bruyne</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
-                </div>
-                <div class="single-player">
-                    <img src="img/players/player-12.png" alt="player">
-                    <h2>Philippe Coutinho</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
-                </div>
-            </div>
+<!-- Start Hero area -->
+<section class="hero-area">
+    <div class="container grid-col-2">
+        <div class="float-left">
+            <h1>Conmebol Copa America 2021</h1>
+            <a href="#" class="btn-button">Watch Live <i class="fas fa-arrow-right"></i></a>
         </div>
-    </section>
-    <!-- End Players area -->
+        <div class="float-right">
+            <img src="img/banner.png" alt="banner image">
+        </div>
+    </div>
+</section>
+<!-- End Hero area -->
 
-    <!-- Start Daily hilights section -->
-    <section class="hilights-area">
-        <div class="container grid-col-2">
-            <div class="float-left">
-                <h2>All Highlights Copa America 2021</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quasi aut nobis ex magnam. Nostrum, eligendi. Asperiores voluptates magnam illo nemo perferendis sequi deserunt, ad maxime nesciunt non dolorum omnis.</p>
-                <a href="#" class="btn-button">Watch Now <i class="fas fa-arrow-right"></i></a>
+  <!-- Start Players area -->
+  <section class="players-area">
+    <div class="container">
+        <div class="all-players">
+            <div class="single-player">
+                <img src="img/players/player-1.png" alt="player">
+                <h2>Neymar Jr</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
             </div>
-            <div class="float-right">
-                <img src="img/match.png" alt="match">
+            <div class="single-player">
+                <img src="img/players/player-2.png" alt="player">
+                <h2>Lionel Messi</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
+            </div>
+            <div class="single-player">
+                <img src="img/players/player-3.png" alt="player">
+                <h2>Cristiano Ronaldo</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
+            </div>
+            <div class="single-player">
+                <img src="img/players/player-4.png" alt="player">
+                <h2>Paulo Dybala</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
+            </div>
+            <div class="single-player">
+                <img src="img/players/player-5.png" alt="player">
+                <h2>Mesut Ozil </h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
+            </div>
+            <div class="single-player">
+                <img src="img/players/player-6.png" alt="player">
+                <h2>Mauro Icardi </h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
+            </div>
+            <div class="single-player">
+                <img src="img/players/player-7.png" alt="player">
+                <h2>Di Maria</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
+            </div>
+            <div class="single-player">
+                <img src="img/players/player-8.png" alt="player">
+                <h2>Kylian Mbappé</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
+            </div>
+            <div class="single-player">
+                <img src="img/players/player-9.png" alt="player">
+                <h2>Mohamed Salah</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
+            </div>
+            <div class="single-player">
+                <img src="img/players/player-10.png" alt="player">
+                <h2>Harry Kane</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
+            </div>
+            <div class="single-player">
+                <img src="img/players/player-11.png" alt="player">
+                <h2>Kevin De Bruyne</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
+            </div>
+            <div class="single-player">
+                <img src="img/players/player-12.png" alt="player">
+                <h2>Philippe Coutinho</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatibus magnam quaerat voluptate, possimus atque? Cupiditate commodi veritatis eum quibusdam?</p>
             </div>
         </div>
-    </section>
-    <!-- End Daily hilights section -->
+    </div>
+</section>
+<!-- End Players area -->
 
-    <footer class="footer-area">
-        <div class="container">
-            <img src="img/Logo.png" alt="logo">
-            <div class="social-icon">
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-dribbble"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-            </div>
-            <p>Copyright © 2022 Football</p>
+<!-- Start Daily hilights section -->
+<section class="hilights-area">
+    <div class="container grid-col-2">
+        <div class="float-left">
+            <h2>All Highlights Copa America 2021</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quasi aut nobis ex magnam. Nostrum, eligendi. Asperiores voluptates magnam illo nemo perferendis sequi deserunt, ad maxime nesciunt non dolorum omnis.</p>
+            <a href="#" class="btn-button">Watch Now <i class="fas fa-arrow-right"></i></a>
         </div>
-    </footer>
+        <div class="float-right">
+            <img src="img/match.png" alt="match">
+        </div>
+    </div>
+</section>
+<!-- End Daily hilights section -->
+
+<footer class="footer-area">
+    <div class="container">
+        <img src="img/Logo.png" alt="logo">
+        <div class="social-icon">
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-dribbble"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+        </div>
+        <p>Copyright © 2022 Football</p>
+    </div>
+</footer>
+
+
 </body>
 </html>
+  
